[gd_scene load_steps=8 format=3 uid="uid://bdoobp6pin4av"]

[ext_resource type="Texture2D" uid="uid://cqcmxgmbwt5ba" path="res://fisherman/fisherman_stand.png" id="1_xcn7o"]
[ext_resource type="Script" path="res://fisherman/fisherman.gd" id="2_7vo1l"]
[ext_resource type="Texture2D" uid="uid://c1aehnrk5cgx4" path="res://fisherman/fisherman_cast.png" id="3_cqskg"]
[ext_resource type="Texture2D" uid="uid://qarx4tdy6i8o" path="res://spook_radius.svg" id="4_p7x7k"]
[ext_resource type="Texture2D" uid="uid://dj8ani5r216ko" path="res://fisherman/bobber.png" id="4_qo6fp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qbt2u"]
radius = 14.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_2pj1u"]
radius = 300.0

[node name="Fisherman" type="Sprite2D"]
texture = ExtResource("1_xcn7o")
script = ExtResource("2_7vo1l")
pull_sprite = ExtResource("1_xcn7o")
cast_sprite = ExtResource("3_cqskg")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(117, -122)

[node name="FishingLine" type="Line2D" parent="."]
width = 5.0

[node name="Bobber" type="Area2D" parent="."]
position = Vector2(117, -122)

[node name="Sprite2D" type="Sprite2D" parent="Bobber"]
texture = ExtResource("4_qo6fp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bobber"]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_qbt2u")

[node name="SpookRadius" type="Area2D" parent="Bobber"]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bobber/SpookRadius"]
shape = SubResource("CircleShape2D_2pj1u")
debug_color = Color(0.937255, 0.152941, 0.498039, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Bobber/SpookRadius"]
visible = false
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_p7x7k")

[node name="CastMarker" type="Marker2D" parent="."]
position = Vector2(-98, -82)

[node name="CatchTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Bobber" to="." method="_on_bobber_area_entered"]
[connection signal="timeout" from="CatchTimer" to="." method="_on_catch_timer_timeout"]
